--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
+            background-size: cover;
+            background-attachment: fixed; */
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+            background: black url("imagens/wallpaper002.jpg") center center repeat-y fixed;
             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid blue;
@@ -26,7 +32,11 @@
 <body>
     <main>
         <h1>Teste de imagem</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere architecto cumque alias libero molestias? Ad itaque saepe minus delectus sequi ex odit odio natus sapiente. Sit vel praesentium totam nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eius perspiciatis autem quae ex, dicta cupiditate voluptatem quod iusto unde. Non ut dignissimos voluptas ex nobis, aut accusantium praesentium odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque ipsum eaque sunt quis doloribus sed nobis fuga est perspiciatis, magnam possimus ea nostrum accusantium explicabo aperiam accusamus nam laboriosam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere architecto cumque alias libero molestias? Ad itaque saepe minus delectus sequi ex odit odio natus sapiente. Sit vel praesentium totam nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eius perspiciatis autem quae ex, dicta cupiditate voluptatem quod iusto unde. Non ut dignissimos voluptas ex nobis, aut accusantium praesentium odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque ipsum eaque sunt quis doloribus sed nobis fuga est perspiciatis, magnam possimus ea nostrum accusantium explicabo aperiam accusamus nam laboriosam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere architecto cumque alias libero molestias? Ad itaque saepe minus delectus sequi ex odit odio natus sapiente. Sit vel praesentium totam nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eius perspiciatis autem quae ex, dicta cupiditate voluptatem quod iusto unde. Non ut dignissimos voluptas ex nobis, aut accusantium praesentium odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque ipsum eaque sunt quis doloribus sed nobis fuga est perspiciatis, magnam possimus ea nostrum accusantium explicabo aperiam accusamus nam laboriosam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere architecto cumque alias libero molestias? Ad itaque saepe minus delectus sequi ex odit odio natus sapiente. Sit vel praesentium totam nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eius perspiciatis autem quae ex, dicta cupiditate voluptatem quod iusto unde. Non ut dignissimos voluptas ex nobis, aut accusantium praesentium odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque ipsum eaque sunt quis doloribus sed nobis fuga est perspiciatis, magnam possimus ea nostrum accusantium explicabo aperiam accusamus nam laboriosam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere architecto cumque alias libero molestias? Ad itaque saepe minus delectus sequi ex odit odio natus sapiente. Sit vel praesentium totam nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eius perspiciatis autem quae ex, dicta cupiditate voluptatem quod iusto unde. Non ut dignissimos voluptas ex nobis, aut accusantium praesentium odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum atque ipsum eaque sunt quis doloribus sed nobis fuga est perspiciatis, magnam possimus ea nostrum accusantium explicabo aperiam accusamus nam laboriosam.
+        </p>
     </main>
 </body>
 </html>
