--- a/exercícios/ex023/tabela006.html
+++ b/exercícios/ex023/tabela006.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas Responsivas</title>
     <style>
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
         }
-        table{
+
+        table {
             border-collapse: collapse;
         }
-        caption{
+
+        caption {
             font-size: 1.5em;
             font-weight: bolder;
             padding: 10px;
         }
-        td,th{
+
+        td,
+        th {
             border: 1px solid black;
             padding: 10px;
         }
-        tr:nth-child(even){
+
+        tr:nth-child(even) {
             background-color: rgba(228, 228, 228);
         }
-        div#container{
+
+        div#container {
             overflow-x: auto;
         }
     </style>
 </head>
+
 <body>
     <h1>
         Tabelas em telas pequenas
     </h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores placeat officiis tempore ipsum delectus, eligendi harum pariatur expedita, non ullam illo perspiciatis maxime reiciendis, dolor amet earum odit. Maiores, obcaecati.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores placeat officiis tempore ipsum delectus,
+        eligendi harum pariatur expedita, non ullam illo perspiciatis maxime reiciendis, dolor amet earum odit. Maiores,
+        obcaecati.</p>
     <div id="container">
         <table>
             <caption>Tabelas Responsivas</caption>
@@ -118,4 +128,5 @@
         </table>
     </div>
 </body>
+
 </html>
