--- a/exercícios/ex026/mq002/index.html
+++ b/exercícios/ex026/mq002/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)">
+    <!-- media="screen(Media Type) and (Media Feature(orientation: landscape))" -->
     <title>Media Query</title>
 </head>
 <body>
